compiler/src/compile/snapshots/compiler__compile__constant_propagation_visitor__test__constant_propagation_snapshot_tests@assignment_loop.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/constant_propagation_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/constant_propagation/assignment_loop.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "x",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "y",
            value: Expression(
              span: "[span]",
              kind: Integer(0),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: Loop(
            block: [
              Statement(
                span: "[span]",
                kind: If(
                  condition: Expression(
                    span: "[span]",
                    kind: BinaryOperation(
                      lhs: Expression(
                        span: "[span]",
                        kind: Variable("y"),
                        meta: "[meta]",
                      ),
                      operator: EqEq,
                      rhs: Expression(
                        span: "[span]",
                        kind: Integer(3),
                        meta: "[meta]",
                      ),
                    ),
                    meta: "[meta]",
                  ),
                  true_block: [
                    Statement(
                      span: "[span]",
                      kind: Break,
                      meta: "[meta]",
                    ),
                  ],
                  false_block: [],
                ),
                meta: "[meta]",
              ),
              Statement(
                span: "[span]",
                kind: Assignment(
                  ident: "y",
                  value: Expression(
                    span: "[span]",
                    kind: Variable("x"),
                    meta: "[meta]",
                  ),
                ),
                meta: "[meta]",
              ),
              Statement(
                span: "[span]",
                kind: Assignment(
                  ident: "x",
                  value: Expression(
                    span: "[span]",
                    kind: Integer(3),
                    meta: "[meta]",
                  ),
                ),
                meta: "[meta]",
              ),
            ],
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "z",
            value: Expression(
              span: "[span]",
              kind: Variable("y"),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
  ],
)
