compiler/src/compile/snapshots/compiler__compile__constant_propagation_visitor__test__constant_propagation_snapshot_tests@call_statement_poison.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/constant_propagation_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/constant_propagation/call_statement_poison.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            ident: "int_prop",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "x",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: Call(
            name: "foo",
            arguments: [],
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "y",
            value: Expression(
              span: "[span]",
              kind: Variable("int_prop"),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "z",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
    Function(
      name: "foo",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Wait,
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
  ],
)
