compiler/src/compile/snapshots/compiler__compile__constant_propagation_visitor__test__constant_propagation_snapshot_tests@simple_case_int.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/constant_propagation_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/constant_propagation/simple_case_int.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "x",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "y",
            value: Expression(
              span: "[span]",
              kind: Integer(4),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "z",
            value: Expression(
              span: "[span]",
              kind: BinaryOperation(
                lhs: Expression(
                  span: "[span]",
                  kind: Integer(3),
                  meta: "[meta]",
                ),
                operator: Add,
                rhs: Expression(
                  span: "[span]",
                  kind: Integer(4),
                  meta: "[meta]",
                ),
              ),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
  ],
)
